[package]
name = "geph4-client"
version = "4.11.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2021"
description = "Geph client"
license = "GPL-3.0-only"
repository = "https://github.com/geph-official/geph4-client"

[patch.crates-io]
# sosistab2-obfsudp={path="../sosistab2-obfsudp"}
# sosistab2={path="../sosistab2"}

[lib]
name = "geph4client"
crate-type = ["staticlib", "lib"]

[dependencies]
# Crates managed by Geph/Mel
geph4-protocol = "0.18.0"
tmelcrypt = "0.2.7"
sosistab2 = "0.10"
sosistab2-obfsudp = "0.1"
sosistab2-obfstls = "0.1"
nanorpc = "0.1.12"
geph-nat = "0.1.8"
mizaru = "0.1.3"
geph4-aioutils = "0.1.5"

anyhow = "1.0.86"
async-h1 = "2.3.4"
bincode = "1.3.3"
dirs = "3.0.2"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
futures-util = "0.3.30"
hex = "0.4.3"
http-types = "2.12.0"
log = "0.4.21"
once_cell = "1.19.0"
parking_lot = { version = "0.11.2", features = ["serde"] }
rand = "0.7.3"
regex = "1.10.4"
rsa-fdh = "0.5.0"
scopeguard = "1.2.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.9.9"
smol = "1.3.0"
smol-timeout = "0.6.0"
socksv5 = "0.2.0"
structopt = "0.3.26"
x25519-dalek = { version = "1.2.0", features = ["serde"] }
treebitmap = { package = "ip_network_table-deps-treebitmap", version = "0.5.0" }
async-dup = "1.2.4"
bytes = { version = "1.6.0", features = ["serde"] }
tap = "1.0.1"
smolscale = "0.4.4"
im = "15.1.0"
event-listener = "2.5.3"
cached = "0.23.0"
strip-ansi-escapes = "0.1.1"
tokio = { version = "1.37.0", features = ["rt", "net", "io-util"] }
hyper = { version = "0.14.28", features = [
  "http1",
  "client",
  "server",
  "tcp",
  "stream",
] }
pin-project = "1.1.5"
http = "0.2.12"
psl = "2.1.39"
async-trait = "0.1.80"
env_logger = "0.9.3"
rlimit = "0.6.2"
binary-search = "0.1.2"
fastrand = "1.9.0"
native-tls = { version = "0.2.11", features = ["vendored"] }
itertools = "0.10.5"
whoami = "1.5.1"
tiny_http = "0.12.0"
thiserror = "1.0.61"
backoff = "0.4.0"
libc = "0.2.155"
dashmap = "5.5.3"
default-net = "0.11.0"
eff-wordlist = "1.0.3"
blake3 = "1.5.1"
smol_str = "0.1.24"
stdcode = "0.1.14"
rusqlite = { version = "0.30.0", features = ["backup", "bundled"] }
colored = "2.1.0"
pad = "0.1.6"
futures-intrusive = "0.5.0"
clone-macro = "0.1.0"
sqlx = { version = "0.7.4", default-features = false, features = [
  "sqlite",
  "runtime-tokio",
] }
derivative = "2.2.0"
async-signal = "0.2.6"
pnet_packet = "0.34.0"

[target.'cfg(unix)'.dependencies]
tun = "0.5.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "mmsystem", "timeapi"] }

[profile.dev]
panic = "unwind"
opt-level = 1

[profile.release-dbg]
inherits = "dev"
opt-level = 3

[profile.release]
panic = "abort"
opt-level = 3
debug = 0
# lto = true
strip = true
codegen-units = 1
