[package]
name = "geph4-client"
version = "4.11.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2021"
description = "Geph client"
license = "GPL-3.0-only"
repository = "https://github.com/geph-official/geph4-client"

[patch.crates-io]
# sosistab2-obfsudp={path="../sosistab2-obfsudp"}
# sosistab2={path="../sosistab2"}

[lib]
name = "geph4client"
crate-type = ["staticlib", "lib"]

[dependencies]
# Crates managed by Geph/Mel
geph4-protocol = { git = "https://github.com/M220/geph4-protocol", branch = "mod" }
sosistab2 = { git = "https://github.com/M220/sosistab2", branch = "mod" }
sosistab2-obfsudp = { git = "https://github.com/M220/sosistab2-obfsudp", branch = "mod" }
sosistab2-obfstls = { git = "https://github.com/M220/sosistab2-obfstls", branch = "mod" }
nanorpc = { git = "https://github.com/M220/nanorpc" }
geph-nat = { git = "https://github.com/M220/geph-nat" }
tmelcrypt = "0.2.7"
geph4-aioutils = "0.1.5"

anyhow = "1.0.86"
async-h1 = "2.3.4"
bincode = "1.3.3"
futures-util = "0.3.30"
hex = "0.4.3"
http-types = "2.12.0"
log = "0.4.21"
once_cell = "1.19.0"
regex = "1.10.4"
scopeguard = "1.2.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
smol-timeout = "0.6.0"
structopt = "0.3.26"
x25519-dalek = { version = "2.0.1", features = ["serde", "getrandom"] }
treebitmap = { package = "ip_network_table-deps-treebitmap", version = "0.5.0" }
async-dup = "1.2.4"
bytes = { version = "1.6.0", features = ["serde"] }
tap = "1.0.1"
smolscale = { git = "https://github.com/M220/smolscale" }
im = "15.1.0"
tokio = { version = "1.37.0", features = ["rt", "net", "io-util"] }
hyper = { version = "0.14.28", features = [
  "http1",
  "client",
  "server",
  "tcp",
  "stream",
] }
pin-project = "1.1.5"
psl = "2.1.39"
async-trait = "0.1.80"
binary-search = "0.1.2"
native-tls = { version = "0.2.11", features = ["vendored"] }
whoami = "1.5.1"
tiny_http = "0.12.0"
thiserror = "1.0.61"
backoff = "0.4.0"
libc = "0.2.155"
dashmap = "5.5.3"
eff-wordlist = "1.0.3"
blake3 = "1.5.1"
stdcode = "0.1.14"
rusqlite = { version = "0.30.0", features = ["backup", "bundled"] }
colored = "2.1.0"
pad = "0.1.6"
futures-intrusive = "0.5.0"
clone-macro = "0.1.0"
sqlx = { version = "0.7.4", default-features = false, features = [
  "sqlite",
  "runtime-tokio",
] }
derivative = "2.2.0"
async-signal = "0.2.6"
dirs = "5.0.1"
smol = "2.0.0"
cached = { version = "0.51.3", features = ["async"] }
event-listener = "5.3.0"
fastrand = "2.1.0"
env_logger = "0.11.3"
itertools = "0.13.0"
rlimit = "0.10.1"
strip-ansi-escapes = "0.2.0"
socksv5 = "0.3.1"
parking_lot = "0.12.2"
smol_str = { version = "0.2.2", features = ["serde"] }
rsa-fdh = { git = "https://github.com/M220/rsa-fdh" }
sha2 = "0.10.8"
rand = "0.8.5"
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
mizaru = { git = "https://github.com/M220/mizaru" }

[target.'cfg(unix)'.dependencies]
tun = "0.6.1"

[target.'cfg(target_os = "macos")'.dependencies]
default-net = "0.22.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
  "std",
  "minwindef",
  "mmsystem",
  "timeapi",
] }
pnet_packet = "0.34.0"

[profile.dev]
panic = "unwind"
opt-level = 1

[profile.release-dbg]
inherits = "dev"
opt-level = 3

[profile.release]
panic = "abort"
opt-level = 3
debug = 0
# lto = true
strip = true
codegen-units = 1
