[package]
name = "geph4-binder"
version = "0.1.0"
authors = ["geph-official"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.5"
anyhow = "1.0.33"
libsodium-sys = "0.2.6"
png = "0.16.7"
ureq = "1.5.1"
structopt = "0.3.19"
binder_transport = {path="../lib/binder_transport"}
mizaru = {path="../lib/mizaru"}
bincode = "1.3.1"
native-tls = "0.2.4"
postgres-native-tls = "0.3.0"
easy-parallel = "3.1.0"
log = "0.4.11"
once_cell = "1.4.1"
parking_lot= "0.11.0"
hex= "0.4.2"
r2d2_postgres= "0.16.0"
r2d2= "0.8.9"
rand= "0.7.3"
x25519-dalek= "1.1.0"
env_logger = "0.7.1"
chrono = "0.4.19"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
rsa = { version = "0.3.0", features = ["serde"] }
