[package]
name = "geph4-bridge"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
smol = "1.2.4"
log = "0.4.11"
env_logger = "0.7.1"
structopt = "0.3.19"
x25519-dalek={ version = "1.1.0", features = ["serde"] }
ed25519-dalek={ version = "1.0.1", features = ["serde"] }
binder_transport = {path="../lib/binder_transport"}
bincode = "1.3.1"
hex = "0.4.2"
socksv5 = "0.2.0"
sosistab={path="../lib/sosistab"}
serde = "1.0.116"
blake3 = "0.3.7"
ureq = "1.5.1"
flume = "0.9.1"
