[package]
name = "geph4-bridge"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
smol = "1.2.5"
log = "0.4.11"
env_logger = "0.8.2"
structopt = "0.3.21"
x25519-dalek={ version = "1.1.0", features = ["serde"] }
ed25519-dalek={ version = "1.0.1", features = ["serde"] }
binder_transport = {path="../lib/binder_transport"}
bincode = "1.3.1"
hex = "0.4.2"
socksv5 = "0.2.0"
# sosistab={path="../lib/sosistab"}
serde = "1.0.118"
blake3 = "0.3.7"
ureq = "1.5"
flume = "0.10.1"
once_cell="1"
fastrand="1.4"
aioutils={path="../lib/aioutils"}
smolscale="0.3"
bimap="0.6"
by_address="1"
parking_lot="0.11"
nix="0.22"
smallvec="1"
async-dup="1"
