[package]
name = "geph4-client"
version = "4.2.3"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
vpn_structs={path="../lib/vpn_structs"}
async-h1= "2.3.0"
bincode = "1.3.1"
binder_transport = {path="../lib/binder_transport"}
dirs = "3.0.1"
ed25519-dalek={ version = "1.0.1", features = ["serde"] }
flexi_logger = "0.16.3"
futures-lite= "1.11.3"
hex = "0.4.2"
tar= "0.4.30"
http-types = "2.9.0"
log = "0.4.11"
mizaru={path="../lib/mizaru"}
once_cell= "1.5.2"
parking_lot = { version = "0.11.1", features = ["serde"] }
rand= "0.7"
regex= "1.4.2"
rsa-fdh = "0.5.0"
rusqlite={ version = "0.24.2", features = ["bundled" ] }
scopeguard = "1.1.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
sha2 = "0.9.2"
smol = "1.2.5"
smol-timeout = "0.6.0"
socksv5 = "0.2.0"
sosistab={path="../lib/sosistab"}
strsim = "0.10.0"
structopt = "0.3.21"
x25519-dalek={ version = "1.1.0", features = ["serde"] }
chrono = "0.4.19"
num_cpus= "1.13.0"
async-net= "1.5.0"
socket2= "0.3.19"
aioutils={path="../lib/aioutils"}
treebitmap= "0.4.0"
pnet_packet= "0.27.2"
governor= "0.3.1"
async-dup= "1.2.2"
bytes= "1.0.0"
statsd = "0.14.0"
smolscale={path="../lib/smolscale"}
socks2http={path="../lib/socks2http-rs"}
async-compat="0.2"

[dependencies.async-tls]
version = "0.11.0"
default-features = false
features = ["client"]
# tracing-flame="0.1"

# tracing-subscriber = "0.2.15"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "mmsystem", "timeapi"] }
