[package]
name = "geph4-client"
version = "4.4.5"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
vpn_structs={path="../lib/vpn_structs"}
async-h1= "2.3.0"
bincode = "1.3.1"
binder_transport = {path="../lib/binder_transport"}
dirs = "3.0.1"
ed25519-dalek={ version = "1.0.1", features = ["serde"] }
flexi_logger = "0.16.3"
futures-util="0.3"
hex = "0.4.2"
tar= "0.4.30"
http-types = "2.9.0" 
log = "0.4.11"
mizaru={path="../lib/mizaru"}
once_cell= "1.5.2"
parking_lot = { version = "0.11.1", features = ["serde"] }
rand= "0.7"
regex= "1.4.2"
rsa-fdh = "0.5.0"
# sled="0.34"
acidjson="0.1"
scopeguard = "1.1.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
sha2 = "0.9.2"
smol = "1.2.5"
smol-timeout = "0.6.0"
socksv5 = "0.2.0"
sosistab= "0.3.0"
strsim = "0.10.0"
structopt = "0.3.21"
x25519-dalek={ version = "1.1.0", features = ["serde"] }
chrono = "0.4.19"
async-net= "1.5.0"
socket2= "0.3.19"
aioutils={path="../lib/aioutils"}
treebitmap= "0.4.0" 
pnet_packet= "0.27.2" 
governor= "0.3.1"
async-dup= "1.2.2"
bytes= "1.0.0" 
tap="1"
statsd = "0.14.0"
smolscale= "0.3.7"
socks2http={path="../lib/socks2http-rs"}
async-compat="0.2"
im="15"
# surf={version="2.2.0", features=["h1-client-rustls"], default-features=false}
event-listener="2.5.1"
cached="0.23"
rustls="0.19"
webpki-roots="0.21"
strip-ansi-escapes="0.1"

[dependencies.async-tls]
version = "0.11.0"
default-features = false
features = ["client"]
# tracing-flame="0.1"

# tracing-subscriber = "0.2.15"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "mmsystem", "timeapi"] }
