[package]
name = "geph4-client"
version = "4.4.12-alpha.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"
description="Geph client"
license="GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
# geph4_protocol={path="../lib/geph4_protocol"}
async-h1= "2.3.2"
bincode = "1.3.3"
# geph4_binder_transport = {path="../lib/geph4_binder_transport"}
dirs = "3.0.2"
ed25519-dalek={ version = "1.0.1", features = ["serde"] }
flexi_logger = "0.16.3"
futures-util= "0.3.16"
hex = "0.4.3"
tar= "0.4.37"
http-types = "2.12.0"
log = "0.4.14"
once_cell= "1.8.0"
parking_lot = { version = "0.11.1", features = ["serde"] }
rand= "0.7.3"
regex= "1.5.4"
rsa-fdh = "0.5.0"
# sled="0.34"
acidjson= "0.1.0"
scopeguard = "1.1.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
sha2 = "0.9.5"
smol = "1.2.5"
smol-timeout = "0.6.0"
socksv5 = "0.2.0"
sosistab= "0.4.11"
strsim = "0.10.0"
structopt = "0.3.22"
x25519-dalek={ version = "1.1.1", features = ["serde"] }
chrono = "0.4.19"
async-net= "1.6.1"
socket2= "0.3.19"
# aioutils={path="../lib/aioutils"}
treebitmap= "0.4.0"
pnet_packet= "0.27.2"
governor= "0.3.2"
async-dup= "1.2.2"
bytes= { version = "1.0.1", features = ["serde"] }
tap= "1.0.1"
statsd = "0.14.1"
smolscale= "0.3.12"
async-compat= "0.2.1"
im= "15.0.0"
# surf={version="2.2.0", features=["h1-client-rustls"], default-features=false}
event-listener= "2.5.1"
cached= "0.23.0"
rustls= "0.19.1"
webpki-roots= "0.21.1"
strip-ansi-escapes= "0.1.0"
geph4-binder-transport = "0.1.3"
mizaru = "0.1.3"
geph4-aioutils = "0.1.3"
# alloc_geiger = "0.1"

# socks2http
tokio = { version = "1.10.0", features = ["rt","net", "io-util"] }
hyper = { version = "0.14.11", features = ["http1", "client", "server", "tcp", "stream"] }
pin-project = "1.0.8"
http = "0.2.4"
geph4-protocol = "0.1.0"
psl = "2.0.43"
async-trait = "0.1.51"

[dependencies.async-tls]
version = "0.11.0"
default-features = false
features = ["client"]
# tracing-flame="0.1"

# tracing-subscriber = "0.2.15"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "mmsystem", "timeapi"] }
