[package]
name = "geph4-vpn-helper"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger="0.8"
smol="1"
vpn_structs={path="../lib/vpn_structs"}


log="0.4"
nix="0.19"

anyhow="1"
thiserror="1"
parking_lot="0.11"
pnet_packet="0.27"
defmac="0.2"
once_cell="1"
crossbeam-utils="0.8"
threadpool="1"
flume="0.10"


[target.'cfg(unix)'.dependencies]
tundevice={path="../lib/tundevice"}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "mmsystem", "timeapi"] }
governor="0.3"