[package]
name = "geph4-vpn-helper"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger= "0.8.2"
smol= "1.2.5"
vpn_structs={path="../lib/vpn_structs"}


log= "0.4.11"
nix= "0.19.1"

anyhow= "1.0.37"
thiserror= "1.0.23"
parking_lot= "0.11.1"
pnet_packet= "0.27.2"
defmac= "0.2.1"
once_cell= "1.5.2"
crossbeam-utils= "0.8.1"
threadpool= "1.8.1"
flume= "0.10.1"
sosistab= "0.4.1"

[target.'cfg(unix)'.dependencies]
tundevice={path="../lib/tundevice"}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "mmsystem", "timeapi"] }
governor= "0.3.1"
sysinfo="0.18"
cached="0.23"
