[package]
name = "geph4-vpn-helper"
version = "0.1.5"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"
description="Geph client VPN helper"
license="GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger= "0.8.4"
smol= "1.2.5"
# vpn_structs={path="../lib/vpn_structs"}


log= "0.4.14"
nix= "0.19.1"

anyhow= "1.0.43"
thiserror= "1.0.26"
parking_lot= "0.11.1"
pnet_packet= "0.27.2"
defmac= "0.2.1"
once_cell= "1.8.0"
crossbeam-utils= "0.8.5"
threadpool= "1.8.1"
flume= "0.10.8"
sosistab= "0.4.16"
geph4-protocol = "0.1.0"

[target.'cfg(unix)'.dependencies]
tundevice= "0.1.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "mmsystem", "timeapi"] }
governor= "0.3.2"
sysinfo= "0.18.2"
cached= "0.23.0"
