[package]
name = "geph4-vpntest"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tundevice={path="../lib/tundevice"}
structopt = "0.3.17"
sosistab = {git="https://github.com/geph-official/sosistab.git"}
env_logger="0.7"
smol="1"
async-net="1"
x25519-dalek="1"
etherparse="0.9"
governor="0.3"
nonzero_ext="0.2"
blake3="0.3"
fastrand="1"
hex="0.4"
async-rwlock="1"
async-global-executor="1"