[package]
name = "geph_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
env_logger = "0.10.0"
log = "0.4.19"
simplelog = "0.12.1"
windows-service = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
dirs-next = "2.0.0"
anyhow = "1.0.71"
winapi = "0.3.9"
