[package]
name = "aioutils"
version = "0.1.0"
authors = ["miyuruasuka"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol="1"
serde="1"
anyhow="1"
bincode="1"
smol-timeout="0.6"
async-dup="1.2"

[target.'cfg(windows)'.dependencies]
dnsclient="0.1"

log="0.4"