[package]
name = "binder_transport"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.1"
serde = {version="1.0.116", features=["derive"]}
derivative = "2.1.1"
x25519-dalek = {version="1.1.0", features=["serde"]}
bincode = "1.3.1"
blake3 = "0.3.6"
chacha20poly1305 = "0.6.0"
async-h1 = "2.1.2"
http-types = "2.4.0"
log = "0.4.11"
ureq = "1.4.1"
rand = "0.7.3"
env_logger = "0.7.1"
