[package]
name = "binder_transport"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = { version = "0.3.0", features = ["serde"] }
smol = "1.2.5"
serde = { version = "1.0.118", features = ["derive"] }
derivative = "2.1.3"
x25519-dalek = { version = "1.1.0", features = ["serde"] }
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
bincode = "1.3.1"
blake3 = "0.3.7"
chacha20poly1305 = "0.7.1"
async-h1 = "2.3.0"
http-types = "2.9.0"
log = "0.4.11"
rand = "0.7"
env_logger = "0.8.2"
mizaru={path="../mizaru"}
aioutils={path="../aioutils"}
thiserror= "1.0.23"
rsa-fdh = "0.5.0"
async-trait= "0.1.42"


[dependencies.async-tls]
version = "0.11.0"
default-features = false
features = ["client"]
