[package]
name = "mizaru"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa-fdh = "0.4.1"
rsa = { version = "0.3.0", features = ["serde"] }
rand = "0.7.3"
rayon = "1.4.1"
sha2 = "0.9.1"
bincode = "1.3.1"
serde = { version = "1.0.116", features = ["derive", "rc"] }
hex = "0.4.2"
