[package]
name = "mizaru"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa-fdh = "0.5.0"
rsa = { version = "0.3.0", features = ["serde"] }
rand = "0.7"
rayon = "1.5.0"
sha2 = "0.9.2"
bincode = "1.3.1"
serde = { version = "1.0.118", features = ["derive", "rc"] }
hex = "0.4.2"
im={ version = "15.0.0", features = ["serde", "rayon"] } 
