[package]
name = "smolscale"
version = "0.1.1"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"
description="A global, auto-scaling, preemptive scheduler based on async-executor"
license="ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.3.0"
once_cell="1.4.1"
futures-lite = "1.11.2"
pin-project-lite = "0.1"
scopeguard="1"
event-listener="2"
async-io="1"
anyhow="1"
async-channel="1"
async-oneshot="0.4"
slab="0.4"