[package]
name = "smolscale"
version = "0.2.3"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"
description="A global, auto-scaling, preemptive scheduler based on async-executor"
license="ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.4.0"
once_cell= "1.5.2"
futures-lite = "1.11.3"
pin-project-lite = "0.2.1"
scopeguard= "1.1.0"
event-listener= "2.5.1"
async-io= "1.3.1"
anyhow= "1.0.37"
async-channel= "1.5.1"
async-oneshot= "0.4.2"
slab= "0.4.2"
log="0.4"
num_cpus="1"