[package]
name = "socks2http"
version = "0.1.0"
authors = ["xVanTuring <xVanTuring@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.11", features = ["rt-core","rt-threaded","rt-util","io-util","signal","tcp","stream"]}
hyper = "0.13"
bytes = "0.5.4"
futures = "0.3.4"
pin-project = "0.4.8"
http = "0.2.0"
log = "0.4.8"
env_logger = "0.7.1"
clap = "2.33.0"