[package]
name = "sosistab"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol= "1.2.4"
socket2= "0.3.15"
x25519-dalek={ version = "1.1.0", features = ["serde"] }
serde={ version = "1.0.117", features = ["derive"] }
bytes={ version = "0.6.0", features = ["serde"] }
blake3= "0.3.7"
c2-chacha= "0.2.4"
rand={ version = "0.7.3", features = ["small_rng"] }
constant_time_eq= "0.1.5"
bincode= "1.3.1"
event-listener= "2.5.1"
parking_lot= "0.11.0"
governor= "0.3.1"
probability= "0.17.0"
log= "0.4.11"
priority-queue= "1.0.2"
async-dup= "1.2.2"
once_cell = "1.4.1"
num_cpus= "1.13.0"
anyhow= "1.0.33"
im="15"
scopeguard= "1.1.0"
reed-solomon-erasure= "4.0.2"
indexmap= "1.6.0"
bloomfilter = "1.0.3"
concurrent-queue= "1.2.2"
smolscale={path="../smolscale"}
async-trait= "0.1.41"
dashmap="3"
smol-timeout="0.6"
hex= "0.4.2"
env_logger= "0.8.1"
futures-timer="3"

[dev-dependencies]

socksv5= "0.2.0"
