[package]
name = "sosistab"
version = "0.1.1"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Geph Project <contact@geph.io"]
edition = "2018"
description="An obfuscated datagram transport for horrible networks"
license="MPL-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh="0.1.4"
smol= "1.2.5"
socket2= "0.3.19"
x25519-dalek={ version = "1.1.0", features = ["serde"] }
serde={ version = "1.0.118", features = ["derive"] }
bytes={ version = "1.0.0", features = ["serde"] }
blake3= "0.3.7"
c2-chacha= {version ="0.3.0"}
rand={ version = "0.7", features = ["small_rng"] }
constant_time_eq= "0.1.5"
bincode= "1.3.1"
event-listener= "2.5.1"
futures-util="0.3"
parking_lot= "0.11.1"
governor= "0.3.1"
probability= "0.17.0"
async-dup= "1.2.2"
once_cell = "1.5.2"
arc-swap="1"
num_cpus= "1.13.0"
anyhow= "1.0.37"
scopeguard= "1.1.0"
reed-solomon-erasure={version="4.0.2"}
indexmap= "1.6.1"
bloomfilter = "1.0.3"
concurrent-queue= "1.2.2"
rand_chacha="0.2"
smolscale={version="0.2.1", path="../smolscale"}
async-trait= "0.1.42"
dashmap= "4.0.1"
smol-timeout= "0.6.0"
env_logger= "0.8.2"
futures-timer= "3.0.2"
nonzero_ext= "0.2.0"
tracing={ version = "0.1.22", features = ["log"] }
rustc-hash= "1.1.0"
cached="0.23"
ring="0.16"
im="15"
smallvec="1.6"
thiserror = "1.0"



[target.'cfg(unix)'.dependencies]
nix= "0.19.1"

[dev-dependencies]

socksv5= "0.2.0"
