[package]
name = "tundevice"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocking = "1.0.2"
smol= "1.2.5"
bytes= "1.0.0"
flume = "0.10.1"
log= "0.4.11"

[build-dependencies]
cc = "1.0.66"
