[package]
name = "vpn_structs"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1", features=["derive"]}
bytes={version="0.6", features=["serde"]}
smol="1"