[package]
name = "vpn_structs"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={ version = "1.0.118", features = ["derive"] }
bytes={ version = "1.0.0", features = ["serde"] }
smol= "1.2.5"
sosistab="0.4"