[package]
name = "warpfront"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol="1.2"
bytes="0.6"
anyhow="1"
dashmap="1"
async-h1 = "2.1.2"
http-types = "2.5.0"
parking_lot="0.11"
async-dup="1.2"
smolscale={path="../smolscale"}
log= "0.4.11"
smol-timeout="0.6"
bincode="1"
serde={version="1", features=["derive"]}
spiderchan={path="../spiderchan"}

[dependencies.async-tls]
version = "0.10"
default-features = false
features = ["client"]