[package]
name = "warpfront"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol= "1.2.5"
bytes= "1.0.0"
anyhow= "1.0.37"
dashmap= "4.0.1"
async-h1 = "2.3.0"
http-types = "2.9.0"
parking_lot= "0.11.1"
async-dup= "1.2.2"
sosistab={path="../sosistab"}
log= "0.4.11"
smol-timeout= "0.6.0"
bincode= "1.3.1"
serde={ version = "1.0.118", features = ["derive"] }
async-trait= "0.1.42"
spiderchan={path="../spiderchan"}
argh= "0.1.4"

[dependencies.async-tls]
version = "0.11.0"
default-features = false
features = ["client"]
